compiler: allow tests to be run with AIR ADL instead of Flash Player
Still uses FLASHPLAYER_DEBUGGER, if defined, but can fall back to ADL if AIR_HOME is defined instead