@@ -28,11 +28,13 @@ import as.ASFeatureTestsBase;
 
 import utils.FlashplayerSecurityHandler;
 
+import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.MalformedURLException;
@@ -41,6 +43,8 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -56,6 +60,24 @@ import static org.junit.Assert.fail;
 public class MXMLFeatureTestsBase
 {
 	private static boolean generateResultFile = false;
+
+	private static String APP_DESCRIPTOR_TEMPLATE = "<application xmlns=\"http://ns.adobe.com/air/application/@AIR_VERSION@\">\n" +
+						"  <id>RoyaleAdlWrapper</id>\n" +
+						"  <filename>RoyaleTestsAdlWrapper</filename>\n" +
+						"  <name>Royale Tests Adl Wrapper</name>\n" +
+						"  <versionNumber>1.0.0</versionNumber>\n" +
+						"  <description>Wrapper application for use with the Royale compiler tests.</description>\n" +
+						"  <initialWindow>\n" +
+						"    <title>Royale Tests Adl Wrapper</title>\n" +
+						"    <content>@SWF_NAME@</content>\n" +
+						"    <visible>false</visible>\n" +
+						"    <minimizable>true</minimizable>\n" +
+						"    <maximizable>false</maximizable>\n" +
+						"    <resizable>false</resizable>\n" +
+						"    <width>320</width>\n" +
+						"    <height>240</height>\n" +
+						"  </initialWindow>\n" +
+						"</application>";
 	
 	private static final String NAMESPACE_2009 = "http://ns.adobe.com/mxml/2009";
 	private static final String NAMESPACE_TEST = "library://ns.apache.org/royale/test";
@@ -71,24 +93,104 @@ public class MXMLFeatureTestsBase
 		if(playerGlobal == null || !playerGlobal.isFile() || !playerGlobal.exists()) {
 			hasFlashPlayerGlobal = false;
 		}
+		File adlExecutable = testAdapter.getAirDebugger();
+		if (adlExecutable == null || !adlExecutable.isFile() || !adlExecutable.exists()) {
+			hasAdlExecutable = false;
+		}
 
-		if (hasFlashPlayerExecutable && !hasFlashPlayerGlobal)
+		if ((hasFlashPlayerExecutable || hasAdlExecutable) && !hasFlashPlayerGlobal)
 		{
-			String message = "Fatal Error: If FLASHPLAYER_DEBUGGER is defined, playerglobal must be available";
+			String message = "Fatal Error: If FLASHPLAYER_DEBUGGER or AIR_HOME is defined, playerglobal must be available";
 			System.err.println(message);
 			fail(message);
 		}
 
-		if (!hasFlashPlayerExecutable && hasFlashPlayerGlobal)
+		if (!hasFlashPlayerExecutable && !hasAdlExecutable && hasFlashPlayerGlobal)
 		{
-			String message = "Fatal Error: If playerglobal is available, FLASHPLAYER_DEBUGGER is required";
+			String message = "Fatal Error: If playerglobal is available, FLASHPLAYER_DEBUGGER or AIR_HOME is required";
 			System.err.println(message);
 			fail(message);
+		}
+
+		if (airVersion == null)
+		{
+			File adtExecutable = testAdapter.getAirAdt();
+			if (adtExecutable != null)
+			{
+				String versionOutput = null;
+				try
+				{
+					Process process = Runtime.getRuntime().exec(new String[]{adtExecutable.getAbsolutePath(), "-version"});
+					int exitCode = process.waitFor();
+					if (exitCode == 0)
+					{
+						BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+						versionOutput = reader.readLine();
+					}
+				}
+				catch (Exception e)
+				{
+					String message = "Fatal Error: Could not run ADT from AIR SDK to detect version";
+					System.err.println(message);
+					fail(message);
+				}
+				airVersion = parseAdtVersionNumber(versionOutput);
+				if (airVersion == null)
+				{
+					String message = "Fatal Error: Could not detect AIR SDK version";
+					System.err.println(message);
+					fail(message);
+				}
+			}
 		}
 	}
 
 	protected boolean hasFlashPlayerExecutable = true;
 	protected boolean hasFlashPlayerGlobal = true;
+	protected boolean hasAdlExecutable = true;
+	private static String airVersion = null;
+
+	private static final Pattern AIR_VERSION_PATTERN = Pattern.compile("(\\d+\\.\\d+)(?:\\.\\d)+");
+
+    private String parseAdtVersionNumber(String versionString)
+    {
+		if (versionString == null)
+		{
+			return null;
+		}
+		Matcher matcher = AIR_VERSION_PATTERN.matcher(versionString);
+		if (matcher.find())
+		{
+			return matcher.group(1);
+		}
+		return null;
+    }
+
+	protected File generateTempAppDescriptorFile(String source, String swfFileName, String version)
+	{
+        // Write the application descriptor into a temp file.
+        ITestAdapter testAdapter = TestAdapterFactory.getTestAdapter();
+        String tempDir = testAdapter.getTempDir();
+        File tempDescriptorFile = null;
+        try
+        {
+            tempDescriptorFile = File.createTempFile(getClass().getSimpleName(), "-app.xml", new File(tempDir));
+            tempDescriptorFile.deleteOnExit();
+
+            BufferedWriter out = new BufferedWriter(new FileWriter(tempDescriptorFile));
+            
+            source = source.replaceAll("@SWF_NAME@", swfFileName);
+            source = source.replaceAll("@AIR_VERSION@", version);
+            out.write(source);
+            out.close();
+        }
+        catch (IOException e1) 
+        {
+            e1.printStackTrace();
+            fail("Error generating test code");
+        }
+        return tempDescriptorFile;
+	}
 	
 	protected void compileAndRun(String mxml, boolean withFramework, boolean withRPC, boolean withSpark, String[] otherOptions)
 	{
@@ -175,7 +277,8 @@ public class MXMLFeatureTestsBase
 		}
 		assertThat(sb.toString(), exitCode, is(0));
 
-		// Run the SWF in the standalone player amd wait until the SWF calls System.exit().
+		// Run the SWF in the standalone player or adl
+		// and wait until the SWF calls System.exit() or NativeApplication.nativeApplication.exit().
 		String swf = FilenameNormalization.normalize(tempMXMLFile.getAbsolutePath());
 		swf = swf.replace(".mxml", ".swf");
 		if (hasFlashPlayerExecutable)
@@ -189,6 +292,26 @@ public class MXMLFeatureTestsBase
 				// TODO: Hack to add the directory containing the temp swf to the flashplayer trust.
 				new FlashplayerSecurityHandler().trustFile(tempMXMLFile.getParentFile());
 	
+				exitCode = executeCommandWithTimeout(runArgs, 20);
+			}
+			catch (Exception e)
+			{
+				e.printStackTrace();
+				// If we just print the stacktrace the exitCode is still 0 and the test will pass.
+				fail("Got exception");
+			}
+			
+		    // Check that the runtime exit code was 0, meaning that no asserts failed.
+			assertThat(exitCode, is(0));
+		}
+		else if (hasAdlExecutable)
+		{
+			File adlExecutable = testAdapter.getAirDebugger();
+			File appDescriptorFile = generateTempAppDescriptorFile(APP_DESCRIPTOR_TEMPLATE, new File(swf).getName(), "51.0");
+			String[] runArgs = new String[] { adlExecutable.getPath(), appDescriptorFile.getPath() };
+			try
+			{
+				System.out.println("Executing test:\n" + Arrays.toString(runArgs));
 				exitCode = executeCommandWithTimeout(runArgs, 20);
 			}
 			catch (Exception e)
@@ -315,7 +438,7 @@ public class MXMLFeatureTestsBase
 
 	public static int executeCommandWithTimeout(String[] args, long timeoutInSeconds) throws Exception {
 		ExecutorService service = Executors.newSingleThreadExecutor();
-		Process process = Runtime.getRuntime().exec(args);
+		Process process = new ProcessBuilder(args).inheritIO().start();
 		try {
 			Callable<Integer> call = new CallableProcess(process);
 			Future<Integer> future = service.submit(call);
